--- a/style.css
+++ b/style.css
@@ -16,9 +16,24 @@ body {
 /* Layout */
 
 main {
+    width: 45vw;
+    height: 65vh;
     display: grid;
-    
+    grid-template: repeat(1fr, 6) / repeat(1fr, 5);
+}
+
+#calc-field {
+    grid-area: 1 / 1 / 1 / 5;   
+}
+
+#equals {
+    grid-area: 6 / 1 / 6 / 5;
 }
 
 /* Buttons Styles */
 
+#calc-field {
+    width: 100%;
+    height: 100%;
+    background-color: blanchedalmond;
+}
