--- a/style.css
+++ b/style.css
@@ -32,11 +32,42 @@ main {
 
 #one {
     grid-area: 4 / 1 / 5 / 2;
-    z-index: 2;
 }
 
 #two {
-    grid-area: ;
+    grid-area: 4 / 2 / 5 / 3;
+}
+
+#three {
+    grid-area: 4 / 3 / 5 / 4;
+}
+
+#four {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+#five {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+#six {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+#seven {
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+#eight {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+#nine {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+#zero {
+    grid-area: 5 / 2 / 6 / 3;
 }
 
 /* Buttons Styles */
