grid changes completion

--- a/style.css
+++ b/style.css
@@ -70,6 +70,30 @@ main {
     grid-area: 5 / 2 / 6 / 3;
 }
 
+#addition {
+    grid-area: 2 / 4 / 3 / 5;
+}
+
+#subtraction {
+    grid-area: 3 / 4 / 4 / 5;
+}
+
+#multiplication {
+    grid-area: 4 / 4 / 5 / 5;
+}
+
+#division {
+    grid-area: 5 / 4 / 6 / 5;
+}
+
+#dot {
+    grid-area: 5 / 1 / 6 / 2;
+}
+
+#delete {
+    grid-area: 5 / 3 / 6 / 4;
+}
+
 /* Buttons Styles */
 
 #calc-field {
