--- a/style.css
+++ b/style.css
@@ -100,4 +100,10 @@ main {
     width: 100%;
     height: 100%;
     background-color: blanchedalmond;
+    border: 1px solid black;
+}
+
+button {
+    background-color: blanchedalmond;
+    border: 1px solid black;
 }
