--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ html {
 body {
     font-size: 1rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #7F19A3;
+    background-color: #dfb9ed75;
 }
 
 /* Layout */
@@ -94,18 +96,24 @@ main {
     grid-area: 5 / 3 / 6 / 4;
 }
 
+footer {
+    margin-top: 2rem;
+}
+
 /* Buttons Styles */
 
 #calc-field {
     width: 100%;
     height: 6rem;
-    background-color: blanchedalmond;
-    border: 1px solid black;
+    color: hsl(154, 19%, 35%);
+    background-color: #84f0c198;
+    border: 1px solid hsl(154, 19%, 35%);
 }
 
 button {
-    background-color: blanchedalmond;
-    border: 1px solid black;
+    color: hsl(154, 19%, 35%);
+    background-color: #84f0c198;
+    border: 1px solid hsl(154, 19%, 35%);
     height: 6rem;
     width: 11vw;
     padding: 0;
@@ -115,9 +123,9 @@ button {
     align-items: center;
 }
 
-#zero, #one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #addition, #subtraction, #multiplication, #division, #dot, #delete {
+/*#zero, #one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #addition, #subtraction, #multiplication, #division, #dot, #delete {
     
-}
+}*/
 
 #equals {
     width: 100%;
