--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
     font-size: 1rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #332302;
-    background-color: #FFAF0B;
+    color: #0A1933;
+    background-color: #BFD7FF;
     text-align: center;
     align-content: center;
 }
@@ -20,7 +20,7 @@ body {
 /* Layout */
 
 header {
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
 }
 
 main {
@@ -111,19 +111,19 @@ footer {
 
 #calc-field {
     width: 100%;
-    height: 6rem;
-    color: #332302;
-    background-color: #337EFF;
-    border: 1px solid #332302;
+    height: 3rem;
+    color: #0A1933;
+    background-color: #BFD7FF;
+    border: none;
     font-size: 2rem;
     text-align: right;
     padding: 0 auto;
 }
 
 button {
-    color: #332302;
-    background-color: #337EFF;
-    border: 1px solid #332302;
+    color: #0A1933;
+    background-color: #BFD7FF;
+    border: none;
     height: 6rem;
     width: 11vw;
     padding: 0;
