--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 body {
     font-size: 1rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #0A1933;
+    color: #332302;
     background-color: #BFD7FF;
     text-align: center;
     align-content: center;
@@ -114,17 +114,18 @@ footer {
 #calc-field {
     width: 100%;
     height: 4rem;
-    color: #0A1933;
+    color: #332302;
     background-color: #BFD7FF;
     border: none;
     border-radius: 2rem;
     font-size: 2rem;
     text-align: right;
     padding-right: 1rem;
+    box-shadow: inset 6px 6px 6px hsl(218, 100%, 81%), inset -6px -6px 6px hsl(218, 100%, 93%);
 }
 
 button {
-    color: #0A1933;
+    color: #332302;
     background-color: #BFD7FF;
     border: none;
     border-radius: 50%;
