button border radius fix

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ button {
     color: #332302;
     background-color: #BFD7FF;
     border: none;
-    border-radius: 50%;
+    border-radius: 12rem;
     height: 6rem;
     width: 11vw;
     margin: 0;
