--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-color: #BFD7FF;
     text-align: center;
     align-content: center;
+    margin: 0;
 }
 
 /* Layout */
@@ -115,6 +116,8 @@ footer {
     width: 100%;
     height: 4rem;
     color: #332302;
+    padding-right: 1rem;
+    padding-top: 0.75rem;
     background-color: #BFD7FF;
     border: none;
     border-radius: 2rem;
